--- a/front/html/product.html
+++ b/front/html/product.html
@@ -112,5 +112,6 @@
     </footer>
   <script src="../js/basket.js"></script>
   <script src="../js/cart.js"></script>
+  <script src="../js/product.js"></script>
   </body>
 </html>
