--- a/front/html/confirmation.html
+++ b/front/html/confirmation.html
@@ -76,5 +76,22 @@
       </div>
     </footer>
   <script src="../js/confirmation.js"></script>
+
+  <script>
+
+// recapitulatif de la commande
+
+let params = new URL(document.location).searchParams;
+let id = params.get("id");
+console.log(id);
+
+const nbOrder = document.getElementById("orderId");
+nbOrder.innerHTML = id
+localStorage.clear()
+
+
+  </script>
+
+  
   </body>
 </html>
