--- a/front/html/cart.html
+++ b/front/html/cart.html
@@ -152,7 +152,7 @@ function saveBasket(basket){
 
 function getBasket(){
 
-console.log(localstorage.getItem("basket"));
+console.log(localStorage.getItem("basket"));
 
     let basket = monstorage.getItem("basket");
     if (basket == null) {
