modification cart js

--- a/front/html/cart.html
+++ b/front/html/cart.html
@@ -140,13 +140,12 @@
 
 // enregistrement du panier dans le localstorage
 
-console.log(localStorage)
-
-let monstorage = localStorage;
-
 function saveBasket(basket){
-    monstorage.getItem("basket", JSON.stringify(basket));
+  
+  localStorage.setItem("basket", JSON.stringify(basket));
 }
+
+
 
 // recuperation des produits du localstorage
 
