--- a/front/html/product.html
+++ b/front/html/product.html
@@ -111,9 +111,9 @@
       </div>
     </footer>
 
-  
-  <script src="../js/cart.js"></script>
   <script src="../js/product.js"></script>
+  <script src="../js/cart.js"></script>
+  <script src="../js/basket.js"></script>
 
 </body>
 </html>
