--- a/front/html/cart.html
+++ b/front/html/cart.html
@@ -213,6 +213,30 @@ document.querySelectorAll(".deleteItem").forEach(item => item.addEventListener("
       }
   }))
 
+// affichage de la quantité et du prix total
+  
+setTotalQuantity()
+setTotalPrice()
+
+// formulaire de contact
+
+let form = document.querySelector('.cart__order__form')
+
+form.firstName.addEventListener('change', function(){ 
+validNameCity(this)
+})
+
+form.lastName.addEventListener('change', function(){ 
+validNameCity(this)
+})
+
+form.city.addEventListener('change', function(){ 
+    validNameCity(this)
+})
+
+form.email.addEventListener('change', function(){ 
+    validMail(this)
+})
   
   
 
