--- a/front/html/cart.html
+++ b/front/html/cart.html
@@ -325,6 +325,30 @@ function removeFromBasket(product){
     saveBasket(basket)
 }
 
+// recupération du nombre total de produit du localStorage 
+
+function getNumberProduct() {
+    let basket = getBasket()
+    let number = 0
+    for (let product of basket) {
+        number += product.quantity
+    }
+    return number
+}
+
+ // affichage de la quantité totale du panier
+  
+ function setTotalQuantity() {
+    let totalQuantity = document.getElementById('totalQuantity')
+    let newQuantity = document.createTextNode(`${getNumberProduct()}`)
+    if (newQuantity != undefined) {
+        totalQuantity.replaceChild(newQuantity, totalQuantity.childNodes[0])
+
+    } else {
+        totalQuantity.appendChild(newQuantity)
+    }
+}
+
 
   </script>
 
