--- a/front/html/cart.html
+++ b/front/html/cart.html
@@ -349,6 +349,17 @@ function getNumberProduct() {
     }
 }
 
+// affichage du prix total
+
+function setTotalPrice() {
+    let totalPrice = document.getElementById('totalPrice')
+    let newPrice = document.createTextNode(`${getTotalPrice()}`)
+    if (newPrice != undefined) {
+        totalPrice.replaceChild(newPrice, totalPrice.childNodes[0])
+    } else {
+        totalPrice.appendChild(newPrice)
+    }
+}
 
   </script>
 
