--- a/front/html/product.html
+++ b/front/html/product.html
@@ -111,7 +111,6 @@
       </div>
     </footer>
 
-    <a href="index.html"></a>
 
   <script>
 
@@ -175,7 +174,7 @@
     
     // recherche dans le panier
             let foundProduct = basket.find(p => p.id == productId.id)        
-            if (foundProduct != undefined) {
+            if (founddProduct != undefined) {
                 foundProduct.quantity++;
             }else{
                 productId.quantity = 1;
