--- a/front/html/confirmation.html
+++ b/front/html/confirmation.html
@@ -79,15 +79,43 @@
 
   <script>
 
-// recapitulatif de la commande
+// recupération des objets demandés pour passer commande 
 
-let params = new URL(document.location).searchParams;
-let id = params.get("id");
-console.log(id);
+let contact = getContact()
+let basket = getBasket()
 
-const nbOrder = document.getElementById("orderId");
-nbOrder.innerHTML = id
+let products = basket.map(i => i.trueId) 
+
+let  post = {
+    contact : contact,
+    products : products,
+}
+
+
+// envoi des données au serveur
+
+ fetch("http://localhost:3000/api/products/order",apiParam )
+ .then(data => data.json())
+
+ // affichage du numéro de commande
+
+ .then (order => {
+     let htmlOrderId = document.getElementById('orderId')
+     let newOrderId = document.createTextNode(`${order.orderId}`)
+    
+    if (newOrderId != undefined) {
+        htmlOrderId.replaceChild(newOrderId, htmlOrderId.childNodes[0])
+
+    } else {
+        htmlOrderId.appendChild(newOrderId)
+    }
+})
+
+// suppression du localStorage pour éviter les erreurs une fois la commande passé
+
 localStorage.clear()
+
+
 
 
   </script>
