--- a/front/html/confirmation.html
+++ b/front/html/confirmation.html
@@ -81,7 +81,7 @@
 
 // recupération des objets demandés pour passer commande 
 
-let contact = getContact()
+
 let basket = getBasket()
 
 let products = basket.map(i => i.trueId) 
@@ -91,6 +91,16 @@ let  post = {
     products : products,
 }
 
+// option necessaire à l'api pour utiliser POST
+
+const apiParam = {
+    method : 'POST',
+    headers : {
+        'Accept' : 'application/json',
+        'Content-Type': 'application/json' 
+    },
+    body : JSON.stringify(post)
+}
 
 // envoi des données au serveur
 
@@ -114,9 +124,6 @@ let  post = {
 // suppression du localStorage pour éviter les erreurs une fois la commande passé
 
 localStorage.clear()
-
-
-
 
   </script>
 
