--- a/front/html/confirmation.html
+++ b/front/html/confirmation.html
@@ -81,8 +81,14 @@
 
 // recupération des objets demandés pour passer commande 
 
+let contact = getcontact()
+
+    console.log(contact)
 
 let basket = getBasket()
+
+    console.log(basket)
+
 
 let products = basket.map(i => i.trueId) 
 
