--- a/front/html/cart.html
+++ b/front/html/cart.html
@@ -324,7 +324,7 @@ function removeFromBasket(product){
     saveBasket(basket)
 }
 
-// recupération du nombre total de produit du localStorage 
+// recupération du nombre total de produits du localStorage 
 
 function getNumberProduct() {
     let basket = getBasket()
