--- a/front/html/confirmation.html
+++ b/front/html/confirmation.html
@@ -79,9 +79,11 @@
 
   <script>
 
+
+
 // envoi des données au serveur
 
-fetch("http://localhost:3000/api/products/order",apiParam )
+fetch("http://localhost:3000/api/products")
  .then(data => data.json())
 
  // affichage du numéro de commande
