--- a/front/html/confirmation.html
+++ b/front/html/confirmation.html
@@ -75,19 +75,6 @@
         </div>
       </div>
     </footer>
-  
-<script>
-
-    function confirmation() {
-      const confirmNumb = document.getElementById("orderId");
-      confirmNumb.innerText = localStorage.getItem("orderId");
-      console.log("Id de la commande =");
-      console.log(localStorage.getItem("orderId"));
-      localStorage.clear();
-  }
-    confirmation();
-
-  </script>
-
+    <script src="../js/confirmation.js"></script>
   </body>
 </html>
